--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        </style>
     <title>Survey Form</title>
 </head>
 <body>
@@ -17,7 +20,7 @@
       <section class="section-form">
     <form class="survey-form">
 
-        <div class="div-form">
+        <div class="div-name">
         <h1>name</h1>
     </div>
         <input class="input-form" type="form" placeholder="Enter your name"  name="name"><br><br>
@@ -46,13 +49,13 @@
 
     <div class="div-recommend">
         <h1> Would you recommend freeCodeCamp to a friend?</h1>
-       <input class="radio" type="radio">
+       <input class="radio" type="radio" id="radio" name="radio">
        <label for="Definitely">Definitely</label>
        <br>
-       <input  class="radio" type="radio">
+       <input  class="radio" type="radio" id="radio" name="radio">
        <label for="Maybe">Maybe</label>
        <br>
-       <input  class="radio" type="radio">
+       <input  class="radio" type="radio" id="radio" name="radio">
        <label for="Not sure">Not sure</label>
     </div>
 
@@ -70,7 +73,7 @@
     </div>
   
         <div class="div-improved">
-            <h1>What would you like to see improved?(Check all that apply)</h1> 
+            <h1>What would you like to see improved?<SPan>(Check all that apply)</SPan></h1> 
             <input  class="checkbox" type="checkbox" id="check1" name="check1" value="Front-end">
             <label  class="checkbox" for="vehicle1"> Front-end Projects</label><br>
             <input  class="checkbox" type="checkbox" id="check2" name="check2" value="Back-end">
